--- a/contact/index.html
+++ b/contact/index.html
@@ -15,7 +15,7 @@
             <nav class="navbar nav navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">  
                     <div class="logo">
-                        <img src="/imagenes-Logo/depositphotos_91581834-stock-illustration-nurse-hat-colored-vector-icon.jpg" alt="">
+                        <img src="../imagenes-Logo/depositphotos_91581834-stock-illustration-nurse-hat-colored-vector-icon.jpg" alt="">
                     </div> 
                   <a class="navbar-brand " href="#">Enfermera🩺🩹</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/main/index.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="../main/index.html">Inicio</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#practicas">Lo que hago</a>
@@ -63,12 +63,15 @@
     <footer class="footer">
 
       <ul class="ul-footer">
-        <li class="list"><a class=" a "  href="/main/index.html" title="Inicio">💉Inicio</a></li>
-        <li class="list"><a class=" a " href="/contact/index.html" title="contacto">💉Contacto</a></li>
+        <li class="list"><a class=" a "  href="../main/index.html" title="Inicio">💉Inicio</a></li>
+        <li class="list"><a class=" a " href="../contact/index.html" title="contacto">💉Contacto</a></li>
         <li class="list"><a  class="a" href="#practicas">💉Lo que hago</a></li>
       </ul>
     
     </footer>
 
+    
+    <script src="./js/main.js"></script>
+    <script src="https://kit.fontawesome.com/82dcb5a41c.js" crossorigin="anonymous"></script>
 </body>
 </html>
