--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <footer class="footer">
 
   <ul class="ul-footer">
-    <li class="list"><a class=" a "  href="../main/index.html" title="Inicio">💊Inicio</a></li>
+    <li class="list"><a class=" a "  href="/contact/index.html" title="Inicio">💊Inicio</a></li>
     <li class="list"><a class=" a " href="../contact/index.html" title="contacto">💊Contacto</a></li>
     <li class="list"><a  class="a" href="#practicas">💊Lo que hago</a></li>
   </ul>
