--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             <nav class="navbar nav navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">  
                     <div class="logo">
-                        <img src="../imagenes-Logo/depositphotos_91581834-stock-illustration-nurse-hat-colored-vector-icon.jpg" alt="">
+                        <img src="/imagenes-Logo/depositphotos_91581834-stock-illustration-nurse-hat-colored-vector-icon.jpg" alt="">
                     </div> 
                   <a class="navbar-brand " href="#">Enfermera🩺🩹</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
         </header>
 
 
-        <section class="section__3">
+        <section class="section__3" id="contact">
             <h1 class="contact-h1">Contactame, estoy a tu disposicion</h1>
 
             <form class="form"  action=""  id ="contacto" >
@@ -64,7 +64,7 @@
 
       <ul class="ul-footer">
         <li class="list"><a class=" a "  href="/index.html" title="Inicio">💉Inicio</a></li>
-        <li class="list"><a class=" a " href="../contact/index.html" title="contacto">💉Contacto</a></li>
+        <li class="list"><a class=" a " href="/contact.html" title="contacto">💉Contacto</a></li>
         <li class="list"><a  class="a" href="#practicas">💉Lo que hago</a></li>
       </ul>
     
