--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="#practicas">Lo que hago</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../contact/index.html" title="contacto">Contact</a>
+                    <a class="nav-link" href="/contact.html" title="contacto">Contact</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled">WhatsApp</a>
@@ -48,13 +48,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../imagenes.carousel/family-home-184017659.jpg" class="d-block w-100" alt="...">
+                <img src="/imagenes.carousel/family-home-184017659.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../imagenes.carousel/nurse-female-doctor-medication-hand-isolated-whi-medical-workers-white-background-smiling-doctors-nurses-102431886.jpg" class="d-block w-100" alt="...">
+                <img src="/imagenes.carousel/nurse-female-doctor-medication-hand-isolated-whi-medical-workers-white-background-smiling-doctors-nurses-102431886.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../imagenes.carousel/salud_cardiovascular.jpg" class="d-block w-100" alt="...">
+                <img src="/imagenes.carousel/salud_cardiovascular.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -83,13 +83,13 @@
                 </p>
             </div>
             <figure class="box__img1">
-               <img src="../imagenes-section/ilustracion-personas-mayores-seguro-vida_53876-26659.jpg" alt="">
+               <img src="/imagenes-section/ilustracion-personas-mayores-seguro-vida_53876-26659.jpg" alt="">
             </figure>
         </article>
 
         <article class="box2">
             <figure class="box__img2">
-                <img src="../imagenes-section/th.jpg" alt="">
+                <img src="/imagenes-section/th.jpg" alt="">
              </figure>
             <div class="box__text2">
                 <p class="box-text__p">
@@ -113,7 +113,7 @@
                 </p>
             </div>
             <figure class="box__img1">
-               <img src="../imagenes-section/thumb-1920-513905.jpg" alt="">
+               <img src="/imagenes-section/thumb-1920-513905.jpg" alt="">
             </figure>
         </article>
     </section>
@@ -122,8 +122,8 @@
 <footer class="footer">
 
   <ul class="ul-footer">
-    <li class="list"><a class=" a "  href="/contact/index.html" title="Inicio">💊Inicio</a></li>
-    <li class="list"><a class=" a " href="../contact/index.html" title="contacto">💊Contacto</a></li>
+    <li class="list"><a class=" a "  href="/index.html" title="Inicio">💊Inicio</a></li>
+    <li class="list"><a class=" a " href="/contact.html" title="contacto">💊Contacto</a></li>
     <li class="list"><a  class="a" href="#practicas">💊Lo que hago</a></li>
   </ul>
 
