--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <main class="main"> 
@@ -18,7 +18,7 @@
         <nav class="navbar nav navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">  
                 <div class="logo">
-                    <img src="/imagenes-Logo/depositphotos_91581834-stock-illustration-nurse-hat-colored-vector-icon.jpg" alt="">
+                    <img src="./imagenes-section/ilustracion-personas-mayores-seguro-vida_53876-26659.jpg" alt="">
                 </div> 
               <a class="navbar-brand " href="#">Enfermera🩺🩹</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="#practicas">Lo que hago</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/contact.html" title="contacto">Contact</a>
+                    <a class="nav-link" href="./contact.html" title="contacto">Contact</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled">WhatsApp</a>
@@ -44,17 +44,17 @@
           </nav>
     </header>
 
-    <section class="section__1" >
+    <section class="section__1" id="inicio"
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/imagenes.carousel/family-home-184017659.jpg" class="d-block w-100" alt="...">
+                <img src="./imagenes.carousel/family-home-184017659.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/imagenes.carousel/nurse-female-doctor-medication-hand-isolated-whi-medical-workers-white-background-smiling-doctors-nurses-102431886.jpg" class="d-block w-100" alt="...">
+                <img src="./imagenes.carousel/nurse-female-doctor-medication-hand-isolated-whi-medical-workers-white-background-smiling-doctors-nurses-102431886.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/imagenes.carousel/salud_cardiovascular.jpg" class="d-block w-100" alt="...">
+                <img src="./imagenes.carousel/salud_cardiovascular.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -83,13 +83,13 @@
                 </p>
             </div>
             <figure class="box__img1">
-               <img src="/imagenes-section/ilustracion-personas-mayores-seguro-vida_53876-26659.jpg" alt="">
+               <img src="./imagenes-section/ilustracion-personas-mayores-seguro-vida_53876-26659.jpg" alt="">
             </figure>
         </article>
 
         <article class="box2">
             <figure class="box__img2">
-                <img src="/imagenes-section/th.jpg" alt="">
+                <img src="./imagenes-section/th.jpg" alt="">
              </figure>
             <div class="box__text2">
                 <p class="box-text__p">
@@ -113,7 +113,7 @@
                 </p>
             </div>
             <figure class="box__img1">
-               <img src="/imagenes-section/thumb-1920-513905.jpg" alt="">
+               <img src="./imagenes-section/thumb-1920-513905.jpg" alt="">
             </figure>
         </article>
     </section>
@@ -122,8 +122,8 @@
 <footer class="footer">
 
   <ul class="ul-footer">
-    <li class="list"><a class=" a "  href="/index.html" title="Inicio">💊Inicio</a></li>
-    <li class="list"><a class=" a " href="/contact.html" title="contacto">💊Contacto</a></li>
+    <li class="list"><a class=" a "  href="#inicio" title="Inicio">💊Inicio</a></li>
+    <li class="list"><a class=" a " href="./contact.html" title="contacto">💊Contacto</a></li>
     <li class="list"><a  class="a" href="#practicas">💊Lo que hago</a></li>
   </ul>
 
