--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </p>
             </div>
             <figure class="box__img1">
-               <img src="imagenes-section/thumb-1920-513905.jpg" alt="">
+               <img src="../Ladign-page-medicine/imagenes-section/thumb-1920-513905.jpg" alt="">
             </figure>
         </article>
     </section>
