--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
                 </p>
             </div>
             <figure class="box__img1">
-               <img src="imagenes-section/ilustracion-personas-mayores-seguro-vida_53876-26659.jpg" alt="">
+               <img src="../Ladign-page-medicine/imagenes-section/th.jpg" alt="">
             </figure>
         </article>
 
         <article class="box2">
             <figure class="box__img2">
-                <img src="imagenes-section/th.jpg" alt="">
+                <img src="../Ladign-page-medicine/imagenes-section/ilustracion-personas-mayores-seguro-vida_53876-26659.jpg" alt="">
              </figure>
             <div class="box__text2">
                 <p class="box-text__p">
