--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             <nav class="navbar nav navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">  
                     <div class="logo">
-                        <img src="/imagenes-Logo/depositphotos_91581834-stock-illustration-nurse-hat-colored-vector-icon.jpg" alt="">
+                        <img src="../Ladign-page-medicine/imagenes-Logo/depositphotos_91581834-stock-illustration-nurse-hat-colored-vector-icon.jpg" alt="">
                     </div> 
                   <a class="navbar-brand " href="#">Enfermera🩺🩹</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
