--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#practicas">Lo que hago</a>
@@ -63,15 +63,15 @@
     <footer class="footer">
 
       <ul class="ul-footer">
-        <li class="list"><a class=" a "  href="/index.html" title="Inicio">💉Inicio</a></li>
-        <li class="list"><a class=" a " href="/contact.html" title="contacto">💉Contacto</a></li>
+        <li class="list"><a class=" a "  href="index.html" title="Inicio">💉Inicio</a></li>
+        <li class="list"><a class=" a " href="contact.html" title="contacto">💉Contacto</a></li>
         <li class="list"><a  class="a" href="#practicas">💉Lo que hago</a></li>
       </ul>
     
     </footer>
 
 
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
     <script src="https://kit.fontawesome.com/82dcb5a41c.js" crossorigin="anonymous"></script>
 </body>
 </html>
