--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="#practicas">Lo que hago</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./contact.html" title="contacto">Contact</a>
+                    <a class="nav-link" href="contact.html" title="contacto">Contact</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled">WhatsApp</a>
@@ -123,14 +123,14 @@
 
   <ul class="ul-footer">
     <li class="list"><a class=" a "  href="#inicio" title="Inicio">💊Inicio</a></li>
-    <li class="list"><a class=" a " href="./contact.html" title="contacto">💊Contacto</a></li>
+    <li class="list"><a class=" a " href="contact.html" title="contacto">💊Contacto</a></li>
     <li class="list"><a  class="a" href="#practicas">💊Lo que hago</a></li>
   </ul>
 
 </footer>
 
 
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
     <script src="https://kit.fontawesome.com/82dcb5a41c.js" crossorigin="anonymous"></script>
 </body>
 </html>
