--- a/contact.html
+++ b/contact.html
@@ -24,16 +24,7 @@
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#practicas">Lo que hago</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link disabled">WhatsApp</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                       </li>
                     </ul>
                   </div>
