--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <main class="main"> 
 
-  <span class="wasap"><a class="wasap-a" href="facebook.com"><i class="fa-brands i fa-whatsapp"></i></a></span>
+  <span class="wasap"><a class="wasap-a" href="https://web.whatsapp.com/"><i class="fa-brands i fa-whatsapp"></i></a></span>
 
 
     <header class="header">
