--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Enfermera 🩺</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -18,7 +18,7 @@
         <nav class="navbar nav navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">  
                 <div class="logo">
-                    <img src="../Ladign-page-medicine/imagenes-Logo/depositphotos_91581834-stock-illustration-nurse-hat-colored-vector-icon.jpg" alt="">
+                    <img src="./imagenes-Logo/depositphotos_91581834-stock-illustration-nurse-hat-colored-vector-icon.jpg" alt="">
                 </div> 
               <a class="navbar-brand " href="#">Enfermera🩺🩹</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,13 +48,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../Ladign-page-medicine/imagenes-carousel/family-home-184017659.jpg" class="d-block w-100" alt="...">
+                <img src="./imagenes-carousel/family-home-184017659.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../Ladign-page-medicine/imagenes-carousel/nurse-female-doctor-medication-hand-isolated-whi-medical-workers-white-background-smiling-doctors-nurses-102431886.jpg" class="d-block w-100" alt="...">
+                <img src="./imagenes-carousel/nurse-female-doctor-medication-hand-isolated-whi-medical-workers-white-background-smiling-doctors-nurses-102431886.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../Ladign-page-medicine/imagenes-carousel/salud_cardiovascular.jpg" class="d-block w-100" alt="...">
+                <img src="./imagenes-carousel/salud_cardiovascular.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -66,6 +66,7 @@
               <span class="visually-hidden"></span>
             </button>
           </div>
+        
     </section>
 
 
@@ -74,7 +75,7 @@
         <h1>¿Que hago?</h1>
         <article class="box1">
             <div class="box__text1">
-                <p class="box-text__p"> 
+                <p class="box-text__p1"> 
                     <i>
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum nemo perferendis veniam aliquam deleniti, aliquid, minus, ipsa architecto pariatur dolor id maxime laudantium molestias accusamus reprehenderit laborum quod! Perferendis, suscipit.
                         Quis sit nulla facilis, enim provident ad veritatis error in placeat voluptate, iusto debitis non repellendus adipisci possimus. Dignissimos libero natus deleniti facere vel in fuga odio eveniet accusamus neque.
@@ -83,16 +84,16 @@
                 </p>
             </div>
             <figure class="box__img1">
-               <img src="../Ladign-page-medicine/imagenes-section/th.jpg" alt="">
+               <img src="./imagenes-section/ilustracion-personas-mayores-seguro-vida_53876-26659.jpg" alt="">
             </figure>
         </article>
 
         <article class="box2">
             <figure class="box__img2">
-                <img src="../Ladign-page-medicine/imagenes-section/ilustracion-personas-mayores-seguro-vida_53876-26659.jpg" alt="">
+                <img src="./imagenes-section/th.jpg" alt="">
              </figure>
             <div class="box__text2">
-                <p class="box-text__p">
+                <p class="box-text__p2">
                     <i>
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum nemo perferendis veniam aliquam deleniti, aliquid, minus, ipsa architecto pariatur dolor id maxime laudantium molestias accusamus reprehenderit laborum quod! Perferendis, suscipit.
                         Quis sit nulla facilis, enim provident ad veritatis error in placeat voluptate, iusto debitis non repellendus adipisci possimus. Dignissimos libero natus deleniti facere vel in fuga odio eveniet accusamus neque.
@@ -104,7 +105,7 @@
 
         <article class="box1">
             <div class="box__text1">
-                <p class="box-text__p">
+                <p class="box-text__p1">
                     <i>
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum nemo perferendis veniam aliquam deleniti, aliquid, minus, ipsa architecto pariatur dolor id maxime laudantium molestias accusamus reprehenderit laborum quod! Perferendis, suscipit.
                         Quis sit nulla facilis, enim provident ad veritatis error in placeat voluptate, iusto debitis non repellendus adipisci possimus. Dignissimos libero natus deleniti facere vel in fuga odio eveniet accusamus neque.
@@ -113,7 +114,7 @@
                 </p>
             </div>
             <figure class="box__img1">
-               <img src="../Ladign-page-medicine/imagenes-section/thumb-1920-513905.jpg" alt="">
+               <img src="./imagenes-section/thumb-1920-513905.jpg" alt="">
             </figure>
         </article>
     </section>
