--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     
     <main class="main-contact">
-        <header class="header">
+        <!--<header class="header">
             <nav class="navbar nav navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">  
                     <div class="logo">
@@ -31,7 +31,13 @@
                 </div>
               </nav>
         </header>
+      -->
 
+      <div class="toggle">
+        <div class="toggle__line"></div>
+        <div class="toggle__line"></div>
+        <div class="toggle__line"></div>
+      </div>
 
         <section class="section__3" id="contact">
             <h1 class="contact-h1">Contactame, estoy a tu disposicion</h1>
